variables.RunHalf.scala.error
Compilation error:
RunHalf:8: error: java.awt.Color does not take parameters
  if (Color.orange()){
                  ^RunHalf:9: error: not found: value OrangeCells
    orangeCells = OrangeCells +1
                  ^